Resolved dark mode issue in donate section

--- a/sass/common/_dark.scss
+++ b/sass/common/_dark.scss
@@ -332,3 +332,13 @@ body.dark .copy-status:active::after {
   display: block;
   color: $link-color-dark;
 }
+
+body.dark .modal-content {
+  background: $body-bg-dark;
+  color: $body-color-dark;
+  border: 1px solid white;
+}
+
+body.dark .modal-dialog {
+  box-shadow: 0px 0px 10px 0px;
+}
